Add GPU-Only Dockerfile
Will not run any CPU tasks

--- a/Dockerfile.gpuonly
+++ b/Dockerfile.gpuonly
@@ -12,9 +12,13 @@ RUN apt-get -y install ocl-icd-opencl-dev
 RUN dpkg -i /tmp/fahclient_7.5.1_amd64.deb || exit 0
 RUN rm /tmp/fahclient_7.5.1_amd64.deb
 
+ADD docker-entrypoint.sh /
+ADD buildconfig.sh /
+
 WORKDIR /root
 VOLUME /root
 
 EXPOSE 7396
 
+ENTRYPOINT ["/docker-entrypoint.sh"]
 CMD FAHClient --user=CoreWeave --team=236584 --gpu=true --smp=true --priority=low --cpu-usage=90 --web-allow=0/0 --allow=0/0 --gpu-usage=100
